@@ -1,0 +1,10 @@
+public class Item {
+	public String getId() {
+		return id;
+	}
+	public void setId(String id) {
+		this.id = id;
+	}
+	private String id;
+	
+}
