@@ -1,0 +1,9 @@
+public class ServiceResponse {
+	public Item[] getItems() {
+		return items;
+	}
+	public void setItems(Item[] items) {
+		this.items = items;
+	}
+	Item[] items;
+}
